--- a/ghost/i18n/locales/bg/comments.json
+++ b/ghost/i18n/locales/bg/comments.json
@@ -19,7 +19,7 @@
     "Comment": "Коментар",
     "Commenting disabled": "Коментирането е изключено",
     "Complete your profile": "Попълнете профила си",
-    "Contact support": "Свържете се с поддръжката",
+    "Contact support": "Връзка с поддръжката",
     "Delete": "Изтриване",
     "Deleted": "Изтрито",
     "Deleted member": "Изтрит абонат",
